--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,8 +1,3 @@
-h1 a {
-    color: #FCA205;
-    font-family: 'Lobster';
-}
-
 body {
     padding-left: 15px;
 }
@@ -28,7 +23,9 @@ h1, h2, h3, h4 {
 }
 
 .date {
-    color: #00FF00;
+    color: #A4A4A4;
+    float: right;
+    padding: 10px;
 }
 
 .save {
@@ -52,4 +49,20 @@ h1, h2, h3, h4 {
 
 .post h1 a, .post h1 a:visited {
     color: #000000;
+}
+
+.btn {
+  background-color: #555555;
+  border: none;
+  color: white;
+  padding: 10px 10px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  -webkit-transition-duration: 0.4s; /* Safari */
+  transition-duration: 0.4s;
+  cursor: pointer;
+  float: right;
 }
