--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -2,9 +2,9 @@
 
 {% block content %}
     {% for post in posts %}
-        <div class='post'>
-            <div class='date'>
-                <p>published: {{ post.published_date }}</p>
+        <div class="post">
+            <div class="date">
+                {{ post.published_date }}
             </div>
             <h1><a href="{% url 'post_detail' pk=post.pk %}">{{post.title}}</a></h1>
             <p>{{post.text|linebreaksbr}}</p>
